# Learn_HowToOpenCV

./: .gitignore  CMakeLists.txt  README.md  opencv_test_case.cmake  test_utils.hpp.tmp
2DGeoTrans/: CMakeLists.txt
AffineTransform/: geo_trans_2d.cpp
BayesFilter/: CMakeLists.txt  linear_kalman_filter.cpp  particle_filter.cpp
BayesianFilter/: CMakeLists.txt  kalmanfilter.cpp
ColorSpace/: CMakeLists.txt  rgb_hsv.cpp  rgb_ycbcr.cpp  rgb_yuv.cpp  split_merge.cpp
Cv3D/: CMakeLists.txt  cv3d_calib_zhang.cpp  cv3d_find_f_mat_from_images.cpp  cv3d_find_f_mat_from_stream.cpp  cv3d_main_calib_zhang.cpp
EdgeDetector/: CMakeLists.txt  canny_edge_detector.cpp  canny_filter.cpp  differential_edge_detector.cpp  laplacian_edge_detector.cpp  sobel_edge_detector.cpp
FileSystem/: CMakeLists.txt  main_filesystem.cpp
FileSystem/filesystem/: attributes.hpp  common.hpp  filesystem.hpp  glob.hpp  mkdir.hpp  open.hpp  rename.hpp  rm.hpp  rmdir.hpp  status.hpp  transform_char.cpp  transform_char.hpp
GeometricFeatures/: CMakeLists.txt  aspect_ratio_area.cpp  center_of_gravity.cpp  contours.cpp  perimeter_roundness.cpp
Homography/: CMakeLists.txt  find_homography_with_lf_matching.cpp  local_features_matching.cpp  perspective.cpp
LinearAlgebla/: CMakeLists.txt
LocalFeatures/: CMakeLists.txt  Tips.txt  agast_keypoint.cpp  akaze_keypoint_descriptor.cpp  brisk_keypoint_descriptor.cpp  ev_keypoint.cpp  fast_keypoint.cpp  harris_keypoint.cpp  kaze_keypoint_descriptor.cpp  mser_keypoint.cpp  orb_keypoint_descriptor.cpp  sift_keypoint_descriptor.cpp  star_keypoint.cpp
Mat/: mat.h  (+7 more)
(+77 files in other folders)
